--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,11 @@
 [OK] - Hata: Bir sayfayı anasayfaya birden fazla ekleyebiliyor.
 [OK] - İnternete bağlı olmadan uygulamayı açınca kullanıcı dostu bir hata mesajı gösterilmeli.
-[--] - Ayarlarda bir değişiklik yapınca anasayfaya direk yansımalı.
-[--] - Ayarlarda yeni bir bölüm eklenir ya da çıkarılırsa işleme dair Toast mesajı göster.
-     - Bunun yerine ayarlara değişiklikleri kaydet butonu eklenebilir.   
+[OK] - Ayarlarda bir değişiklik yapınca anasayfaya direk yansımalı.
+[OK] - Ayarlara değişiklikleri kaydet butonu ekle.   
+[OK] - Ayarlarda yeni bir bölüm eklenir ya da çıkarılırsa işleme dair mesaj göster.
+[OK] - Hata görüntüle butonunu kaldır.
+[OK] - Hata: Hot Reload yapınca duyurular görünmeyebiliyor.
+[OK] - Error görüntülerken ikonu 3-4 kat büyük ve daha şeffaf yap. Butona buton görünümü eklenmeli.
 [--] - Rehber ekranına arama filteremesine dair bilgilendirme eklenmeli.
 [--] - Tarayıcıda obisise ve webmaile yönlendiren bir kısayol eklenmeli.
 [--] - İletişim ekranına uygulamayı paylaş özelliği ekle.
@@ -10,4 +13,4 @@
 [--] - Duyuru kartlarına paylaşma ikonu eklenebilir.
 [--] - WebView açılırken indicator gösterilebilir.
 [--] - Hata: WebView içeriği bazen tarayıcıdaki boyutunda görüntülemiyor.
-[--] - (Şimdilik Gereksiz) Duyuru ekranı için pull-to-refresh özelliği eklenmeli.
+[--] - (Belki :/) Duyuru ekranı için pull-to-refresh ya da yenile özelliği eklenmeli.     
