update shortcut screen

--- a/todo.txt
+++ b/todo.txt
@@ -11,9 +11,12 @@
 [OK] - Tarayıcıda obisise ve webmaile yönlendiren bir kısayol eklenmeli.
 [OK] - WebView açılırken indicator gösterilebilir.
 
+[--] - WebView indirme hatası verebiliyor.
+[--] - Uygulama ilk açıldığında meaj gösterilebilir.
 [--] - Hata: WebView içeriği bazen tarayıcıdaki boyutunda görüntülemiyor.(Farabi)
 [--] - Duyuru kartlarına paylaşma ikonu eklenebilir.
 [--] - Rehbere scroll bar eklenebilir.
 [--] - İletişim ekranına uygulamayı paylaş özelliği ekle.
 [--] - Duyuru ve rehber paylaşırken kısa uygulama linki ekle.
-[--] - (Belki :/) Duyuru ekranı için pull-to-refresh ya da yenile özelliği eklenmeli.     
+[--] - (Belki) Duyuru ekranı için pull-to-refresh ya da yenile özelliği eklenmeli.
+[--] - (Belki) Rehberde geri yapınca çıkmak yerine anasayfaya gönderebilir.
