--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
+*
 [OK] - Hata: Bir sayfayı anasayfaya birden fazla ekleyebiliyor.
 [OK] - İnternete bağlı olmadan uygulamayı açınca kullanıcı dostu bir hata mesajı gösterilmeli.
 [OK] - Ayarlarda bir değişiklik yapınca anasayfaya direk yansımalı.
@@ -11,8 +12,10 @@
 [OK] - Tarayıcıda obisise ve webmaile yönlendiren bir kısayol eklenmeli.
 [OK] - WebView açılırken indicator gösterilebilir.
 
-[--] - WebView indirme hatası verebiliyor.
-[--] - Uygulama ilk açıldığında meaj gösterilebilir.
+*
+[OK] - WebView indirme hatası verebiliyor.
+
+[--] - Uygulama ilk açıldığında mesaj gösterilebilir.
 [--] - Hata: WebView içeriği bazen tarayıcıdaki boyutunda görüntülemiyor.(Farabi)
 [--] - Duyuru kartlarına paylaşma ikonu eklenebilir.
 [--] - Rehbere scroll bar eklenebilir.
